[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/GDScript/UI/UnlockPanel.gd" type="Script" id=1]
[ext_resource path="res://Images/RedGnome.png" type="Texture" id=2]
[ext_resource path="res://Theme/kenneyUI.tres" type="Theme" id=3]

[node name="Panel" type="Button"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 3 )
toggle_mode = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Panel_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_Panel_toggled"]
